# gantry

./: .gitignore  DEBUG_GUIDE.md  LOGGING_GUIDE.md  README.md  UPDATES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tauri.conf.json.bak  vite.config.ts  wdio.conf.cjs
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.sh  generate-icons.sh
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: config.rs  devices.rs  logging.rs  mod.rs  processes.rs  scripts.rs  services.rs  settings.rs  system.rs
src/api/: config.ts  devices.ts  index.ts  logging.ts  processes.ts  system.ts
src/components/: CopyableText.tsx  Layout.tsx  PageHeader.tsx  Pagination.tsx  Sidebar.tsx  SpeedometerGauge.tsx  StatCard.tsx  SystemReportModal.tsx
src/constants/: index.ts
src/hooks/: index.ts  usePlatform.tsx  useResourceMonitor.ts
src/pages/: Devices.tsx  Logs.tsx  Processes.tsx  Repositories.tsx  Resources.tsx  Scripts.tsx  Services.tsx  Settings.tsx  StartupApps.tsx
src/types/: index.ts
src/utils/: logger.ts  theme.ts
tests/e2e/: 01-navigation.spec.js  02-resources.spec.js  03-processes.spec.js  04-devices.spec.js  05-services.spec.js  06-scripts.spec.js  helpers.js
