[workspace]
resolver = "2"

[package]
name = "gantry"
version = "0.1.1"
description = "A lightweight Linux system management tool"
authors = ["Cedric Lefebvre"]
license = "MIT"
repository = "https://github.com/Cedric-Lefebvre/gantry"
keywords = ["linux", "system", "systemd", "management"]
categories = ["gui", "os::linux-apis"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gantry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.1", features = ["image-png"] }
tauri-plugin-log = "2"
sysinfo = "0.32"
dirs = "5"
chrono = "0.4"
serde_yaml = "0.9"

