[package]
name = "gantry"
version = "0.1.15"
description = "A lightweight system management tool"
authors = ["Cedric Lefebvre"]
license = "MIT"
repository = "https://github.com/Cedric-Lefebvre/gantry"
keywords = ["system", "management", "monitor", "processes", "services"]
categories = ["gui"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gantry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.1", features = ["image-png", "devtools"] }
tauri-plugin-log = "2"
sysinfo = "0.32"
dirs = "5"
chrono = "0.4"
serde_yaml = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
libc = "0.2"
